# OOAD_Project

./: Bishop.cpp  Bishop.h  CMakeLists.txt  ChessController.cpp  ChessController.h  ChessModel.cpp  ChessModel.h  ChessView.h  King.cpp  King.h  Knight.cpp  Knight.h  Makefile  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp
src/: main.cpp
src/controller/: ChessController.cpp  ChessController.h
src/core/: FenUtils.cpp  FenUtils.h  Utils.cpp  Utils.h
src/gui/: BoardInteractionHandler.cpp  BoardInteractionHandler.h  CapturedPiecesWidget.cpp  CapturedPiecesWidget.h  ChessBoardWidget.cpp  ChessBoardWidget.h  ChessView.cpp  ChessView.h  Constants.h  DrawingUtils.cpp  DrawingUtils.h  GameLoadDialog.cpp  GameLoadDialog.h  MainWindow.cpp  MainWindow.h  WelcomeDialog.cpp  WelcomeDialog.h
src/model/: ChessModel.cpp  ChessModel.h  DatabaseManager.cpp  DatabaseManager.h  Move.cpp  Position.cpp  Position.h
src/model/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
